--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -1,3 +1,19 @@
+.App-logo {
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  
 .tableWrapper{
     float: left;
     width: 100%;
