--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -36,8 +36,11 @@
     float: left;
     width: 100%;
     max-height: 80vh;
+    padding: 15px;
     padding-top: 25px;
+    background: #fff;
     overflow: scroll;
+    box-shadow: 1px 1px 5px #000;
 }
 table {
     float: left;
@@ -66,11 +69,11 @@ body {
     background-color: #a598ee;
     background-size: cover;
     background-position: center center;
-    padding: 15px;
   }
   
   .s003 form {
     width: 100%;
+    padding: 15px;
     margin-bottom: 0;
   }
   
