--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -64,7 +64,7 @@ body {
 }
   .s003 {
     float: left;
-    width: 100%;
+    width: calc(100% - 30px);
     font-family: 'Poppins', sans-serif;
     background-color: #a598ee;
     background-size: cover;
@@ -100,7 +100,7 @@ body {
     border: 0;
     display: block;
     width: 100%;
-    padding: 10px 20px;
+    padding: 0 20px;
     font-size: 16px;
     color: #555;
   }
