--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -1,4 +1,5 @@
 .nav-pills {
+  margin-bottom: 0;
   display: flex;
   list-style: none;
   padding: 0; 
@@ -54,7 +55,7 @@
 .tableWrapper{
     float: left;
     width: 100%;
-    max-height: 80vh;
+    max-height: 60vh;
     padding: 15px;
     padding-top: 25px;
     background: #fff;
