--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -1,5 +1,13 @@
+.humidity {
+  color: #51cccc;
+  padding-top: 14px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: bold;
+  vertical-align: top;
+}
 .nav-pills {
-  margin-bottom: 0;
+  margin: 0;
   display: flex;
   list-style: none;
   padding: 0; 
@@ -8,14 +16,17 @@
 }
 
 .nav-pills li {
-  opacity: 0.5;
-  width: 33%;
+  padding: 15px 0 12.5px;
+  opacity: .5;
+  width: 33.33%;
   cursor: pointer;
+  border-bottom: 4px solid transparent;
 }
 
 .nav-pills .active {
   opacity: 1;
   cursor: default;
+  border-bottom-color:#fff;
 }
 
 .App-logo {
@@ -57,7 +68,6 @@
     width: 100%;
     max-height: 60vh;
     padding: 15px;
-    padding-top: 25px;
     background: #fff;
     overflow: scroll;
     box-shadow: 1px 1px 5px #000;
@@ -65,10 +75,17 @@
 table {
     float: left;
     width: 100%;
+    border-collapse: collapse;
 }
+
+table td{
+  border-bottom: 1px solid #ccc;
+}
+
 .desc {
     opacity: 0.5; 
     text-transform: capitalize;
+    font-size: 14px;
 }
 
 .textLeft {
@@ -92,7 +109,7 @@ body {
   
   .s003 form {
     width: 100%;
-    padding: 15px;
+    padding: 15px 15px 0;
     margin-bottom: 0;
   }
   
