--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -58,6 +58,7 @@
     overflow: scroll;
     border-radius: 3px;
     z-index: 1;
+    box-shadow: 1px 1px 10px #000;
 }
    .citi-search-list li{
         padding: 10px 0;
@@ -137,7 +138,7 @@ body {
     border: 0;
     display: block;
     width: 100%;
-    padding: 0 20px;
+    padding: 0;
     font-size: 16px;
     color: #555;
   }
@@ -234,6 +235,7 @@ body {
   .s003 form .inner-form .input-field.second-wrap {
     -ms-flex-positive: 1;
         flex-grow: 1;
+        width: calc(100% - 100px);
   }
   
   .s003 form .inner-form .input-field.third-wrap {
