--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -242,6 +242,12 @@ body {
     width: 50px;
   }
   
+  .btn-search{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+
   .s003 form .inner-form .input-field.third-wrap .btn-search {
     height: 100%;
     width: 100%;
@@ -267,3 +273,37 @@ body {
       height: 50px;
     }
   }
+
+  .sideMenuHolder{
+    background: teal;
+    color: #fff;
+    font-size: 30px;
+    padding: 40px 0;
+    font-weight: bold;
+    float: left;
+    width: 100%;
+    text-align: center;
+  }
+
+  .sideMenuOverlay {
+      width: 100%;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+      background: rgba(0, 0, 0, 0.5);
+  }
+
+  .mMenu {
+      max-width: 300px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 1001;
+      transition: left 0.2s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+      overflow-x: hidden;
+      background: #fff;
+    }
