--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -9,6 +9,7 @@
 .nav-pills {
   margin: 0;
   display: flex;
+  justify-content: space-around;
   list-style: none;
   padding: 0; 
   font-size: 14px;
@@ -19,7 +20,6 @@
 .nav-pills li {
   padding: 15px 0 12.5px;
   opacity: .5;
-  width: 33.33%;
   cursor: pointer;
   border-bottom: 4px solid transparent;
 }
@@ -275,6 +275,9 @@ body {
   }
 
   .sideMenuHolder{
+    position: absolute;
+    top: 0;
+    z-index: 1000;
     background: teal;
     color: #fff;
     font-size: 30px;
@@ -283,6 +286,7 @@ body {
     float: left;
     width: 100%;
     text-align: center;
+    box-shadow: 1px 1px 10px #000;
   }
 
   .sideMenuOverlay {
@@ -306,4 +310,16 @@ body {
       transition: left 0.2s cubic-bezier(0.77, 0.2, 0.05, 1.0);
       overflow-x: hidden;
       background: #fff;
+    }
+
+    .cities-sidemenu-list{
+      float: left;
+      width: 100%;
+      margin-top: 150px;
+      max-height: calc(100vh - 170px);
+      overflow: scroll;
+    }
+
+    .cities-sidemenu-list li{
+      padding: 20px 0;
     }
