weather app is here

--- a/src/containers/Homepage.css
+++ b/src/containers/Homepage.css
@@ -280,7 +280,7 @@ body {
     position: absolute;
     top: 0;
     z-index: 1000;
-    background: teal;
+    background: #f07567;
     color: #fff;
     font-size: 30px;
     padding: 40px 0;
